--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -9,7 +9,7 @@
         image: ami-04902260ca3d33422
         region: us-east-1
         key_name: devops
-        vpc_subnet_id: vpc-0eba317414ee3ab73
+        vpc_subnet_id: subnet-0a49e84acaf6e28db
         assign_public_ip: yes
         count: 1
         group: eshop
