--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -8,15 +8,16 @@
         instance_type: t2.small
         image: ami-04902260ca3d33422
         region: us-east-1
-        key_name: devops
-        vpc_subnet_id: subnet-0182e4c97d3a8ae1c
+        key_name: devopss
+        vpc_subnet_id: subnet-032c899675aea3620
         assign_public_ip: yes
         count: 1
         group: eshop
         wait: true
         aws_access_key: "{{access_key}}"
         aws_secret_key: "{{secret_key}}"
-        security_token: "{{session_token}}"
+        security_token: "{{session_token}}" 
+
       register: ec2
 
     - name: Add new instance to host group
@@ -31,7 +32,7 @@
         delay: 30
         timeout: 300
       loop: "{{ ec2.instances }}"
-      
+
 - name: Configure EC2
   hosts: launched
   connection: ssh
@@ -41,14 +42,14 @@
       shell: yum-config-manager --enable extras
       become: yes
     - name: Enable docker package
-      shell: amazon-lux-extras enable docker
+      shell: amazon-linux-extras enable docker
       become: yes
     - name: Install Docker and Git
-      yum: 
-        name: 
-         - docker
-         - git
-        state: latest
+      yum:
+        name:
+          - docker
+          - git
+        state: latest 
         update_cache: yes
       become: yes
     - service:
@@ -57,21 +58,19 @@
         enabled: yes
       become: yes
     - name: Set rights to Docker
-      shell: usermod -a -G docker ec2user
-      become: yes 
-    - name: Checkout Git repo
-      git:
+      shell: usermod -a -G docker ec2-user
+      become: yes
+    - name: Checkout Git repot
+      git: 
         repo: "https://github.com/jedv00/4IT572_DevOps.git"
         dest: ./app
     - name: Build eshop docker
       shell: cd app && docker build -t eshop:latest .
       become: yes
-    - name: Rud 
+    - name: Run eshop
       shell: docker run -p 80:3000 eshop
       async: 45
       poll: 0
       become: yes
-    - wait_for: 
+    - wait_for:
         port: 80
-
-
